* **FAQ component:** Allow autogenerated links to open in a new tab/window to improve navigation. * **Styles:** Refine styling to boost the visibility of Lightning icons. * **Terminology:** Standardize term capitalization to ensure link accuracy.

--- a/src/app/shared/components/lightning-icon/lightning-icon.component.scss
+++ b/src/app/shared/components/lightning-icon/lightning-icon.component.scss
@@ -162,6 +162,10 @@
     background-color: #1589ee;
     border-radius: 0.25rem;
   }
+
+  &.slds-icon-utility-new_window {
+    background-color: transparent;
+  }
 }
 
 .slds-icon {
